--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -92,7 +92,10 @@
             </div>
             <div class="col-lg-7 col-sm-8 col-md-6 col-xs-5 col-ts-12">
               <div class="block-search-block">
-                <form class="form-search form-search-width-category">
+                <form
+                  class="form-search form-search-width-category"
+                  method="get"
+                >
                   <div class="form-content">
                     <div class="category" id="category-select">
                       <select
@@ -100,13 +103,14 @@
                         data-placeholder="All Categories"
                         class="chosen-select"
                         tabindex="1"
+                        name="category"
                       >
-                        <option value="United States">Accessories</option>
-                        <option value="United Kingdom">Accents</option>
-                        <option value="Afghanistan">Desks</option>
-                        <option value="Aland Islands">Sofas</option>
-                        <option value="Albania">New Arrivals</option>
-                        <option value="Algeria">Bedroom</option>
+                        <option value="Accessories">Accessories</option>
+                        <option value="Accents">Accents</option>
+                        <option value="Desks">Desks</option>
+                        <option value="Sofas">Sofas</option>
+                        <option value="New Arrivals">New Arrivals</option>
+                        <option value="Bedroom">Bedroom</option>
                       </select>
                     </div>
                     <div class="inner">
@@ -423,7 +427,7 @@
         <div class="item mobile-logo">
           <div class="logo">
             <a href="#">
-              <img src="assets/images/logo.png" alt="img" />
+              <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
             </a>
           </div>
         </div>
