arrow updates and others

--- a/productdetails.html
+++ b/productdetails.html
@@ -673,24 +673,9 @@
                 </div>
               </div>
               <div class="tab-details-product">
-                <ul class="tab-link">
-                  <li class="active">
-                    <a
-                      data-toggle="tab"
-                      aria-expanded="true"
-                      href="#product-descriptions"
-                      >Məhsulun təsviri
-                    </a>
-                  </li>
-                  <li class="">
-                    <a
-                      data-toggle="tab"
-                      aria-expanded="true"
-                      href="#information"
-                      >Məlumat
-                    </a>
-                  </li>
-                </ul>
+                <div class="tab-link">
+                  <h2 class="product-grid-title">Məhsulun təsviri</h2>
+                </div>
                 <div class="tab-container">
                   <div id="product-descriptions" class="tab-panel active">
                     <p>
@@ -707,22 +692,6 @@
                       justo, ut rutrum lectus urna sit amet quam. Nulla maximus
                       vestibulum mi vitae accumsan.
                     </p>
-                  </div>
-                  <div id="information" class="tab-panel">
-                    <table class="table table-bordered">
-                      <tr>
-                        <td>Size</td>
-                        <td>XS / S / M / L</td>
-                      </tr>
-                      <tr>
-                        <td>Color</td>
-                        <td>White/ Black/ Teal/ Brown</td>
-                      </tr>
-                      <tr>
-                        <td>Properties</td>
-                        <td>Colorful Dress</td>
-                      </tr>
-                    </table>
                   </div>
                 </div>
               </div>
