--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -426,7 +426,7 @@
       <div class="wapper">
         <div class="item mobile-logo">
           <div class="logo">
-            <a href="#">
+            <a href="index.html">
               <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
             </a>
           </div>
@@ -738,9 +738,12 @@
                     <button class="button btn-continue-shopping">
                       Alış-verişə davam et
                     </button>
-                    <button class="button button-checkout">
-                      Whatsapp-a keç
-                    </button>
+                    <a
+                      href="whatsapp://send?text=Hello!&amp;phone=+994501234567"
+                      class="button button-checkout"
+                    >
+                      <span>Whatsapp-a keç</span>
+                    </a>
                   </div>
                 </div>
               </div>
