--- a/blogdetails.html
+++ b/blogdetails.html
@@ -427,7 +427,7 @@
       <div class="wapper">
         <div class="item mobile-logo">
           <div class="logo">
-            <a href="#">
+            <a href="index.html">
               <img src="assets/images/dekor-dizayn-logo.PNG" alt="img" />
             </a>
           </div>
