--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
         </div>
         <div class="banner-wrapp row-banner">
           <div class="container">
-            <div class="row">
+            <div class="row myRow">
               <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="banner">
                   <div class="item-banner style4">
