--- a/productdetails.html
+++ b/productdetails.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from ledthanhdat.vn/html/cleric/productdetails.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Sep 2023 07:16:39 GMT -->
   <head>
-    <title>Cleric - Details Fullwith</title>
+    <title>Dekor Dizayn - Məhsul</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="assets/images/favicon.png"
-    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap"
       rel="stylesheet"
@@ -983,6 +978,4 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3nDHy1dARR-Pa_2jjPCjvsOR4bcILYsM"></script>
     <script src="assets/js/frontend-plugin.js"></script>
   </body>
-
-  <!-- Mirrored from ledthanhdat.vn/html/cleric/productdetails.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Sep 2023 07:16:49 GMT -->
 </html>
