--- a/productdetails.html
+++ b/productdetails.html
@@ -135,101 +135,149 @@
                   <div class="shopcart-description cleric-submenu">
                     <div class="content-wrap">
                       <h3 class="title">Shopping Cart</h3>
-                      <ul class="minicart-items">
-                        <li class="product-cart mini_cart_item">
-                          <a href="#" class="product-media">
-                            <img
-                              src="assets/images/item-minicart-1.jpg"
-                              alt="img"
-                            />
-                          </a>
-                          <div class="product-details">
-                            <h5 class="product-name">
-                              <a href="#">Voxel Armchair</a>
-                            </h5>
-                            <div class="variations">
-                              <span class="attribute_color">
-                                <a href="#">Black</a>
-                              </span>
-                              ,
-                              <span class="attribute_size">
-                                <a href="#">300ml</a>
-                              </span>
-                            </div>
+                      <ul class="minicart-items mCustomScrollbar _mCS_1">
+                        <div
+                          id="mCSB_1"
+                          class="mCustomScrollBox mCS-light mCSB_vertical mCSB_inside"
+                          tabindex="0"
+                          style="max-height: 250px"
+                        >
+                          <div
+                            id="mCSB_1_container"
+                            class="mCSB_container"
+                            style="position: relative; top: 0; left: 0"
+                            dir="ltr"
+                          >
+                            <li class="product-cart mini_cart_item">
+                              <a
+                                href="productdetails.html"
+                                class="product-media"
+                              >
+                                <img
+                                  src="assets/images/item-minicart-1.jpg"
+                                  alt="img"
+                                  class="mCS_img_loaded"
+                                />
+                              </a>
+                              <div class="product-details">
+                                <h5 class="product-name">
+                                  <a href="#">Voxel Armchair</a>
+                                </h5>
+                                <div class="variations">
+                                  <span class="attribute_color">
+                                    <a href="#">Black</a>
+                                  </span>
+                                </div>
 
-                            <span class="product-quantity"> (x1) </span>
-                            <div class="product-remove">
-                              <a href="#"
-                                ><i class="fa fa-trash-o" aria-hidden="true"></i
-                              ></a>
+                                <span class="product-quantity"> 100x200sm</span>
+                                <div class="product-remove">
+                                  <a href="#"
+                                    ><i
+                                      class="fa fa-trash-o"
+                                      aria-hidden="true"
+                                    ></i
+                                  ></a>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="product-cart mini_cart_item">
+                              <a
+                                href="productdetails.html"
+                                class="product-media"
+                              >
+                                <img
+                                  src="assets/images/item-minicart-2.jpg"
+                                  alt="img"
+                                  class="mCS_img_loaded"
+                                />
+                              </a>
+                              <div class="product-details">
+                                <h5 class="product-name">
+                                  <a href="#">Soap Dining Solutions</a>
+                                </h5>
+                                <div class="variations">
+                                  <span class="attribute_color">
+                                    <a href="#">Black</a>
+                                  </span>
+                                </div>
+
+                                <span class="product-quantity">
+                                  500x250sm
+                                </span>
+                                <div class="product-remove">
+                                  <a href="#"
+                                    ><i
+                                      class="fa fa-trash-o"
+                                      aria-hidden="true"
+                                    ></i
+                                  ></a>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="product-cart mini_cart_item">
+                              <a
+                                href="productdetails.html"
+                                class="product-media"
+                              >
+                                <img
+                                  src="assets/images/item-minicart-3.jpg"
+                                  alt="img"
+                                  class="mCS_img_loaded"
+                                />
+                              </a>
+                              <div class="product-details">
+                                <h5 class="product-name">
+                                  <a href="#">Dining Solutions Soap</a>
+                                </h5>
+                                <div class="variations">
+                                  <span class="attribute_color">
+                                    <a href="#">Black</a>
+                                  </span>
+                                </div>
+
+                                <span class="product-quantity">
+                                  400x220sm
+                                </span>
+                                <div class="product-remove">
+                                  <a href="#"
+                                    ><i
+                                      class="fa fa-trash-o"
+                                      aria-hidden="true"
+                                    ></i
+                                  ></a>
+                                </div>
+                              </div>
+                            </li>
+                          </div>
+                          <div
+                            id="mCSB_1_scrollbar_vertical"
+                            class="mCSB_scrollTools mCSB_1_scrollbar mCS-light mCSB_scrollTools_vertical"
+                            style="display: block"
+                          >
+                            <div class="mCSB_draggerContainer">
+                              <div
+                                id="mCSB_1_dragger_vertical"
+                                class="mCSB_dragger"
+                                style="
+                                  position: absolute;
+                                  min-height: 30px;
+                                  display: block;
+                                  height: 173px;
+                                  max-height: 240px;
+                                "
+                                oncontextmenu="return false;"
+                              >
+                                <div
+                                  class="mCSB_dragger_bar"
+                                  style="line-height: 30px"
+                                ></div>
+                              </div>
+                              <div class="mCSB_draggerRail"></div>
                             </div>
                           </div>
-                        </li>
-                        <li class="product-cart mini_cart_item">
-                          <a href="#" class="product-media">
-                            <img
-                              src="assets/images/item-minicart-2.jpg"
-                              alt="img"
-                            />
-                          </a>
-                          <div class="product-details">
-                            <h5 class="product-name">
-                              <a href="#">Soap Dining Solutions</a>
-                            </h5>
-                            <div class="variations">
-                              <span class="attribute_color">
-                                <a href="#">Black</a>
-                              </span>
-                              ,
-                              <span class="attribute_size">
-                                <a href="#">300ml</a>
-                              </span>
-                            </div>
-
-                            <span class="product-quantity"> (x1) </span>
-                            <div class="product-remove">
-                              <a href="#"
-                                ><i class="fa fa-trash-o" aria-hidden="true"></i
-                              ></a>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="product-cart mini_cart_item">
-                          <a href="#" class="product-media">
-                            <img
-                              src="assets/images/item-minicart-3.jpg"
-                              alt="img"
-                            />
-                          </a>
-                          <div class="product-details">
-                            <h5 class="product-name">
-                              <a href="#">Dining Solutions Soap</a>
-                            </h5>
-                            <div class="variations">
-                              <span class="attribute_color">
-                                <a href="#">Black</a>
-                              </span>
-                              ,
-                              <span class="attribute_size">
-                                <a href="#">300ml</a>
-                              </span>
-                            </div>
-
-                            <span class="product-quantity"> (x1) </span>
-                            <div class="product-remove">
-                              <a href="#"
-                                ><i class="fa fa-trash-o" aria-hidden="true"></i
-                              ></a>
-                            </div>
-                          </div>
-                        </li>
+                        </div>
                       </ul>
-                      <div class="subtotal">
-                        <span class="total-title">Subtotal: </span>
-                        <span class="total-price">
-                          <span class="Price-amount"> $135 </span>
-                        </span>
-                      </div>
+
                       <div class="actions">
                         <a
                           class="button button-viewcart"
@@ -238,7 +286,7 @@
                           <span>Səbətə bax</span>
                         </a>
                         <a
-                          href="whatsapp://send?text=Hello!&phone=+994501234567"
+                          href="whatsapp://send?text=Hello!&amp;phone=+994501234567"
                           class="button button-checkout"
                         >
                           <span>Sifariş et</span>
@@ -329,10 +377,47 @@
                       </li>
                     </ul>
                   </li>
-                  <li class="menu-item">
-                    <a title="Accents" href="#" class="cleric-menu-item-title"
+                  <li class="menu-item menu-item-has-children">
+                    <a
+                      title="Accessories"
+                      href="#"
+                      class="cleric-menu-item-title"
                       >Accents</a
                     >
+                    <span class="toggle-submenu"></span>
+                    <ul role="menu" class="submenu">
+                      <li class="menu-item">
+                        <a title="Living" href="#" class="cleric-item-title"
+                          >Living</a
+                        >
+                      </li>
+                      <li class="menu-item">
+                        <a title="Accents" href="#" class="cleric-item-title"
+                          >Accents</a
+                        >
+                      </li>
+                      <li class="menu-item">
+                        <a
+                          title="New Arrivals"
+                          href="#"
+                          class="cleric-item-title"
+                          >New Arrivals</a
+                        >
+                      </li>
+                      <li class="menu-item">
+                        <a
+                          title="Accessories"
+                          href="#"
+                          class="cleric-item-title"
+                          >Accessories</a
+                        >
+                      </li>
+                      <li class="menu-item">
+                        <a title="Bedroom" href="#" class="cleric-item-title"
+                          >Bedroom</a
+                        >
+                      </li>
+                    </ul>
                   </li>
                   <li class="menu-item">
                     <a title="Tables" href="#" class="cleric-menu-item-title"
@@ -445,6 +530,13 @@
             </div>
           </div>
         </div>
+        <div
+          class="block-minicart cleric-mini-cart block-header cleric-dropdown item"
+        >
+          <a href="shoppingcart.html" class="shopcart-icon">
+            <span class="count"> 0 </span>
+          </a>
+        </div>
         <div class="item mobile-settings-box has-sub">
           <a href="#">
             <span class="icon">
@@ -523,13 +615,12 @@
                   >
                     <img
                       id="img_zoom"
-                      data-zoom-image="assets/images/details-item-1.jpg"
                       src="assets/images/details-item-1.jpg"
                       alt="img"
                     />
-                    <a href="#" class="btn-zoom open_qv"
-                      ><i class="fa fa-search" aria-hidden="true"></i
-                    ></a>
+                    <a href="#" class="btn-zoom open_qv">
+                      <i class="fa fa-search" aria-hidden="true"></i>
+                    </a>
                   </div>
                   <div class="product-preview image-small product_preview">
                     <div
@@ -597,9 +688,7 @@
                     availability:
                     <a href="#">in Stock</a>
                   </div>
-                  <div class="price">
-                    <span>$45</span>
-                  </div>
+
                   <div class="product-details-description">
                     <ul>
                       <li>Vestibulum tortor quam</li>
@@ -607,39 +696,30 @@
                       <li>Art.No. 06-7680</li>
                     </ul>
                   </div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                    fugiat laboriosam rem veritatis voluptas ipsum
+                    necessitatibus harum ab facilis? Corrupti temporibus
+                    deserunt aperiam eveniet inventore omnis dolorum quod fugiat
+                    nobis.
+                  </p>
                   <div class="variations">
                     <div class="attribute attribute_color">
-                      <div class="color-text text-attribute">Color:</div>
-                      <div class="list-color list-item">
-                        <a href="#" class="color1"></a>
-                        <a href="#" class="color2"></a>
-                        <a href="#" class="color3 active"></a>
-                        <a href="#" class="color4"></a>
+                      <div class="color-text text-attribute">
+                        <div class="size-text text-attribute">Color:</div>
+                        <div class="color-container"></div>
                       </div>
                     </div>
-                    <div class="attribute attribute_size">
+                    <div class="attribute attribute_size size-flex">
                       <div class="size-text text-attribute">Size:</div>
                       <div class="list-size list-item">
-                        <a href="#" class="">xs</a>
-                        <a href="#" class="">s</a>
-                        <a href="#" class="active">m</a>
-                        <a href="#" class="">l</a>
-                        <a href="#" class="">xl</a>
-                        <a href="#" class="">xxl</a>
+                        <a href="#" class="">200x300</a>
+                        <a href="#" class="">300x400</a>
+                        <a href="#" class="active">450x550</a>
                       </div>
                     </div>
                   </div>
                   <div class="group-button">
-                    <div class="size-chart-wrapp">
-                      <div class="btn-size-chart">
-                        <a
-                          id="size_chart"
-                          href="assets/images/size-chart.jpg"
-                          class="fancybox"
-                          >View Size Chart</a
-                        >
-                      </div>
-                    </div>
                     <div class="quantity-add-to-cart">
                       <div class="quantity">
                         <div class="control">
@@ -652,7 +732,7 @@
                             data-min="0"
                             value="1"
                             title="Qty"
-                            class="input-qty qty"
+                            class="input-qty qty numeric-input"
                             size="4"
                           />
                           <a href="#" class="btn-number qtyplus quantity-plus"
@@ -977,5 +1057,6 @@
     <script src="assets/js/jquery.scrollbar.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3nDHy1dARR-Pa_2jjPCjvsOR4bcILYsM"></script>
     <script src="assets/js/frontend-plugin.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
