--- a/productdetails.html
+++ b/productdetails.html
@@ -718,6 +718,12 @@
                         <a href="#" class="active">450x550</a>
                       </div>
                     </div>
+                    <div class="attribute text-attribute">
+                      <div class="text-attribute">Tags:</div>
+                      <div class="tags">
+                        <a href="#">Chair lsadue</a>
+                      </div>
+                    </div>
                   </div>
                   <div class="group-button">
                     <div class="quantity-add-to-cart">
