--- a/productdetails.html
+++ b/productdetails.html
@@ -707,7 +707,10 @@
                     <div class="attribute attribute_color">
                       <div class="color-text text-attribute">
                         <div class="size-text text-attribute">Color:</div>
-                        <div class="color-container"></div>
+                        <div
+                          class="color-container"
+                          style="background-color: purp"
+                        ></div>
                       </div>
                     </div>
                     <div class="attribute attribute_size size-flex">
