--- a/productdetails.html
+++ b/productdetails.html
@@ -709,7 +709,7 @@
                         <div class="size-text text-attribute">Color:</div>
                         <div
                           class="color-container"
-                          style="background-color: purp"
+                          style="background-color: purple"
                         ></div>
                       </div>
                     </div>
